# temperature_sensor_esp32_mcp9808

./: .cursorignore  .gitignore  README.md
data/: chart_LVK_rel_humidity_jan_mar_2025.csv  chart_LVK_temp.csv  chart_LVK_temp_dew_humid_jan_mar_2025.csv  chart_LVK_wind_gust_dir_jan_mar_2025.csv  chart_LVK_wind_gust_dir_mks_feb_13_mar_12_2025.csv  temperature_logC_2025-03-12.csv
esp32_wifi/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3
esp32_wifi/main/: CMakeLists.txt  main.c
horemheb/: pyproject.toml
horemheb/horemheb/: __init__.py  analysis.py  config.py  loader.py  optimize.py  paths.py  plotting.py  segments.py  test.py
notebooks/: 100_100_plot_temperature.ipynb  100_200_plot_temperature.ipynb  100_400_analyze_LVK_weather_data.ipynb  100_400_plot_temperature.ipynb  200_210_debug_analyze_time_dependent_fit.ipynb
scripts/: query_sensor.py  query_sensors.py  temperature_logger.py
